@@ -944,8 +944,8 @@ declare 236 generic {
 
 # Added for 8.5b3 to improve binary glob match case
 declare 237 generic {
-    int TclByteArrayMatch(CONST char *string, int strLen,
-	    CONST char *pattern, int ptnLen, int nocase)
+    int TclByteArrayMatch(const unsigned char *string, int strLen,
+	    const unsigned char *pattern, int ptnLen)
 }
 
 ##############################################################################
